--- a/index(2).html
+++ b/index(2).html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>hotel booking</title>
+<title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="https://12yash.github.io/travelogue-tech/index(3).html" class="w3-bar-item w3-button">Merchandise</a>
+        <a href="index(3).html" class="w3-bar-item w3-button">Merchandise</a>
         <a href="#" class="w3-bar-item w3-button">Extras</a>
         <a href="#" class="w3-bar-item w3-button">Media</a>
       </div>
@@ -195,7 +195,7 @@ body {font-family: "Lato", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="index(3).html" target="_blank">T.Museum</a></p>
+  <p class="w3-medium">Powered by <a href="homepage.html" target="_blank">T.Museum</a></p>
 </footer>
 
 <script>
@@ -236,3 +236,4 @@ window.onclick = function(event) {
 
 </body>
 </html>
+
